<resources>
    <string name="app_name">Example Shared Preferences</string>
    <string name="title_main_activity">¡Bienvenides a Android!</string>
    <string name="edit_text_hint_name">Ingrese su nombre...</string>
    <string name="edit_text_hint_password">Ingrese su password...</string>
    <string name="edit_text_hint_email">Ingrese su email...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="welcome_to_register">"¡Registrese!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="nav_drawer_home_open">Open</string>
    <string name="nav_drawer_home_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>